--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc src/basico/tipos.ts"
+    "build": "tsc src/poo/clases.ts"
   },
   "keywords": [
     "typescript"
